--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,2 +1,5 @@
-<h1></h1> Home Page</h1>
-<%= link_to "About", about_path %>
+<div class="center jumbotron"	
+	<nav class="navbar navbar-default">
+	<h1>ALPHA BLOG</h1>
+	<%= link_to "Sign-up Now", "#", class: "btn btn-primary btn-lg btn-xlarge" %>
+</div>	
