--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,5 +1,5 @@
 <div class="center jumbotron"	
 	<nav class="navbar navbar-default">
 	<h1>ALPHA BLOG</h1>
-	<%= link_to "Sign-up Now", "#", class: "btn btn-primary btn-lg btn-xlarge" %>
+	<%= link_to "Sign-up Now", signup_path, class: "btn btn-primary btn-lg btn-xlarge" %>
 </div>	
