--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -50,6 +50,11 @@ padding-top: 5px;
 margin-top: 0; 
 }
 
+.listing {
+list-style: none;
+padding-left: 0;
+}
+
 footer {
 margin-top: 45px;
 padding-top: 5px;
