--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -93,4 +93,12 @@ margin-top: 0;
 	padding-top: 15px;	
 	padding-bottom: 15px;	
 }		
-
+.badge {
+  background-color: #CEF6F5;
+  text-transform: uppercase;
+  letter-spacing: -1px;
+  font-weight: bold;
+}
+.input_checkbox input {
+  width: auto !important;
+}
